NEWS for the forestplot package

Changes for 1.2
---------------
* Line-type can be specified
* Line endings can now be marked by a T vertice, this default for all line types other than 1
* The arrow height defaults to the same height as the vertices
* Improved documentation

Changes for 1.1
-----------------
* Multiple lines can now have NA values
* Added ability to position the graph
* Added ability to generate horizontal lines
* Minor documentation changes

Changes for 1.0
---------------
* Separation from the Gmisc-package
* Name change - forestplot2 is now just forestplot in order to allow a deprecated call
  within the Gmisc package without generating a conflict
* The fontfamily arguments are now embedded in the txt_gp that takes input from the
  fpTxtGp function. The fonts for the labels/summaries can be specified down to the
  cell level.
* If provided a vector of length two for the zero argumente you get an area for the zero-effect
* There is a maximum colgap length for the box corresponding to the box height
* confintNormalFn, confintSummaryFn, legendMarkerFn are now called fn.ci_norm, fn.ci_sum, fn.legend
* Argument main in forestplot has changed to title