@@ -82,7 +82,7 @@ forestplot(tabletext,
            cochrane_from_rmeta,new_page = TRUE,
            is.summary=c(TRUE,TRUE,rep(FALSE,8),TRUE),
            clip=c(0.1,2.5), 
-           xlog=TRUE,
+           xlog=TRUE, 
            col=fpColors(box="royalblue",line="darkblue", summary="royalblue"))
 ```
 
@@ -258,16 +258,16 @@ Adding a basic legend is done through the `legend` argument:
 
 ```{r}
 forestplot(tabletext, 
-            legend = c("Sweden", "Denmark"),
-            fn.ci_norm = c(fpDrawNormalCI, fpDrawCircleCI),
-            boxsize = .25, # We set the box size to better visualize the type
-            line.margin = .1, # We need to add this to avoid crowding
-            mean = cbind(HRQoL$Sweden[, "coef"], HRQoL$Denmark[, "coef"]),
-            lower = cbind(HRQoL$Sweden[, "lower"], HRQoL$Denmark[, "lower"]),
-            upper = cbind(HRQoL$Sweden[, "upper"], HRQoL$Denmark[, "upper"]),
-            clip =c(-.125, 0.075),
-            col=fpColors(box=c("blue", "darkred")),
-            xlab="EQ-5D index")
+           legend = c("Sweden", "Denmark"),
+           fn.ci_norm = c(fpDrawNormalCI, fpDrawCircleCI),
+           boxsize = .25, # We set the box size to better visualize the type
+           line.margin = .1, # We need to add this to avoid crowding
+           mean = cbind(HRQoL$Sweden[, "coef"], HRQoL$Denmark[, "coef"]),
+           lower = cbind(HRQoL$Sweden[, "lower"], HRQoL$Denmark[, "lower"]),
+           upper = cbind(HRQoL$Sweden[, "upper"], HRQoL$Denmark[, "upper"]),
+           clip =c(-.125, 0.075),
+           col=fpColors(box=c("blue", "darkred")),
+           xlab="EQ-5D index")
 ```
 
 This can be further customized by setting the `legend_args` argument using the `fpLegend` function:
@@ -285,6 +285,28 @@ forestplot(tabletext,
            upper = cbind(HRQoL$Sweden[, "upper"], HRQoL$Denmark[, "upper"]),
            clip =c(-.125, 0.075),
            col=fpColors(box=c("blue", "darkred")),
+           xlab="EQ-5D index")
+```
+
+
+Grids
+=====
+
+Sometimes you have a very tall graph and you want to add helper lines in order
+to make it easier to see the tick marks. You can do this through the `grid` argument:
+
+```{r}
+forestplot(tabletext, 
+           legend = c("Sweden", "Denmark"),
+           fn.ci_norm = c(fpDrawNormalCI, fpDrawCircleCI),
+           boxsize = .25, # We set the box size to better visualize the type
+           line.margin = .1, # We need to add this to avoid crowding
+           mean = cbind(HRQoL$Sweden[, "coef"], HRQoL$Denmark[, "coef"]),
+           lower = cbind(HRQoL$Sweden[, "lower"], HRQoL$Denmark[, "lower"]),
+           upper = cbind(HRQoL$Sweden[, "upper"], HRQoL$Denmark[, "upper"]),
+           clip =c(-.125, 0.075),
+           col=fpColors(box=c("blue", "darkred")),
+           grid = TRUE,
            xlab="EQ-5D index")
 ```
 
